--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "start": "node .",
+    "start": "DEBUG=loopback nodemon .",
     "posttest": "npm run lint && npm audit"
   },
   "dependencies": {
@@ -23,7 +23,8 @@
   },
   "devDependencies": {
     "eslint": "^3.17.1",
-    "eslint-config-loopback": "^8.0.0"
+    "eslint-config-loopback": "^8.0.0",
+    "nodemon": "^1.19.4"
   },
   "repository": {
     "type": "",
